Fix: Visit routes added
